kubernetes/namespaces.yml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "production"
  labels:
    name: "production"
---
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "beta"
  labels:
    name: "beta"
---
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "staging"
  labels:
    name: "staging"
