kubernetes/cpdpbot.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpdpbot
  labels:
    app: cpdpbot
spec:
  selector:
    matchLabels:
      app: cpdpbot
  replicas: 1
  template:
    metadata:
      labels:
        app: cpdpbot
    spec:
      containers:
      - name: cpdpbot
        image: cpdbdev/cpdpbot:${CPDPBOT_IMAGE_TAG}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
