kubernetes/elasticsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:5-alpine
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 3
            memory: 10Gi
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: "/usr/share/elasticsearch/data"
          name: esdata
      volumes:
      - name: esdata
        persistentVolumeClaim:
          claimName: es-data-disk
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: ClusterIP
  ports:
  - port: 9200
  selector:
    app: elasticsearch
