kubernetes/redirect-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cpdp-redirect-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "*.cpdp.co"
      secretName: tls-secret
  rules:
    - host: "*.cpdp.co"
      http:
        paths:
          - path: /
            backend:
              serviceName: redirect-nginx
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cpdb-redirect-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "*.cpdb.co"
        - "cpdb.co"
      secretName: cpdb-co-tls-secret
  rules:
    - host: "*.cpdb.co"
      http:
        paths:
          - path: /
            backend:
              serviceName: redirect-nginx
              servicePort: 80
    - host: "cpdb.co"
      http:
        paths:
          - path: /
            backend:
              serviceName: redirect-nginx
              servicePort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redirect-nginx
  namespace: production
  labels:
    app: redirect-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redirect-nginx
    spec:
      containers:
        - name: redirect-nginx
          image: nginx:1.15-alpine
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx
      volumes:
        - name: config-volume
          configMap:
            name: redirect-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: redirect-nginx
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: redirect-nginx
